--- a/packages/url/tsconfig-build-esm.json
+++ b/packages/url/tsconfig-build-esm.json
@@ -6,6 +6,6 @@
     "outDir": "../../build/url/esm",
     "sourceMap": false,
     "noEmit": false,
-    "declaration": false
+    "declaration": true
   }
 }
