--- a/packages/url/package.json
+++ b/packages/url/package.json
@@ -6,7 +6,8 @@
   "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "https://github.com/panates/owo.git"
+    "url": "https://github.com/panates/owo.git",
+    "directory": "packages/url"
   },
   "scripts": {
     "compile": "tsc",
