--- a/packages/client/tsconfig-build-esm.json
+++ b/packages/client/tsconfig-build-esm.json
@@ -5,7 +5,7 @@
     "rootDir": "src",
     "outDir": "../../build/client/esm",
     "paths": {
-      "owo/url": ["../../build/url"]
+      "opra/url": ["../../build/url"]
     },
     "sourceMap": false,
     "noEmit": false,
