--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "rootDir": "src",
     "paths": {
-      "owo/url": ["../url/src"]
+      "opra/url": ["../url/src"]
     }
   },
   "include": ["src"],
