--- a/package.json
+++ b/package.json
@@ -45,9 +45,20 @@
     "typescript-esm": "^2.0.0"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
-    "precoverage": "rimraf coverage",
-    "coverage": "jest --collect-coverage --passWithNoTests",
-    "preclean": "rimraf coverage"
+    "compile": "tsc -b tsconfig.json",
+    "lint": "eslint --no-error-on-unmatched-pattern",
+    "clean": "npm run clean:src && npm run clean:dist",
+    "clean:dist": "rimraf cjs esm coverage",
+    "clean:src": "ts-cleanup -s src --all | ts-cleanup -s test",
+    "prebuild": "npm run clean:dist && npm run lint",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "tsc -b tsconfig.build-cjs.json",
+    "build:esm": "tsc -b tsconfig.build-esm.json && tsc-esm -p tsconfig.build-esm.json",
+    "postbuild": "cp package.cjs.json ./cjs/package.json",
+    "test": "jest -passWithNoTests",
+    "precover": "rimraf coverage",
+    "cover": "jest --coverage -passWithNoTests",
+    "precitest": "rimraf coverage",
+    "citest": "jest --coverage --coverageReporters=lcov"
   }
 }
