--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "antlr4ts": "^0.5.0-alpha.4",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "dpdm": "^3.9.0",
+    "madge": "^5.0.1",
     "eslint": "^8.12.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
@@ -45,17 +45,10 @@
     "typescript-esm": "^2.0.0"
   },
   "scripts": {
-    "compile": "tsc -b tsconfig.json",
-    "lint": "eslint --no-error-on-unmatched-pattern",
-    "clean": "npm run clean:src && npm run clean:dist",
-    "clean:dist": "rimraf cjs esm coverage",
-    "clean:src": "ts-cleanup -s src --all | ts-cleanup -s test",
-    "prebuild": "npm run clean:dist && npm run lint",
-    "build": "npm run build:cjs && npm run build:esm",
-    "build:cjs": "tsc -b tsconfig.build-cjs.json",
-    "build:esm": "tsc -b tsconfig.build-esm.json && tsc-esm -p tsconfig.build-esm.json",
-    "postbuild": "cp package.cjs.json ./cjs/package.json",
-    "test": "jest -passWithNoTests",
+    "preclean": "rimraf build coverage",
+    "clean": "rman run clean",
+    "build": "rman build",
+    "test": "jest --passWithNoTests",
     "precover": "rimraf coverage",
     "cover": "jest --coverage -passWithNoTests",
     "precitest": "rimraf coverage",
