--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -25,5 +25,6 @@
     "noEmitOnError": true,
     "strictNullChecks": true,
     "incremental": false,
+    "strictPropertyInitialization": false
   }
 }
