--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "antlr4ts": "^0.5.0-alpha.4",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "madge": "^5.0.1",
     "eslint": "^8.12.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
@@ -32,6 +31,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.5.1",
+    "madge": "^5.0.1",
     "npm-run-path": "^5.1.0",
     "putil-varhelpers": "^1.6.4",
     "rimraf": "^3.0.2",
@@ -41,6 +41,7 @@
     "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.3",
     "typescript-esm": "^2.0.0"
   },
