--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@opra/client",
+  "name": "@opra/nestjs",
   "version": "0.0.1",
-  "description": "Opra rest client",
+  "description": "Opra NestJS module",
   "author": "Panates",
-  "license": "UNLICENSED",
+  "license": "MIT",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/panates/opra.git",
-    "directory": "packages/client"
+    "directory": "packages/nestjs"
   },
   "scripts": {
     "compile": "tsc",
@@ -15,15 +16,15 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/client | cp ../../package.cjs.json ../../build/client/cjs/package.json",
+    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/nestjs | cp ../../package.cjs.json ../../build/nestjs/cjs/package.json",
     "lint": "eslint \"{src,test}/**/*.ts\" --no-error-on-unmatched-pattern",
     "test": "jest",
     "cover": "jest --collect-coverage",
     "check": "dpdm src/** --exit-code circular:1 --tree false --warning -T false",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
-    "clean:dist": "rimraf ../../build/client",
-    "clean:cover": "rimraf ../../coverage/client"
+    "clean:dist": "rimraf ../../build/nestjs",
+    "clean:cover": "rimraf ../../coverage/nestjs"
   },
   "dependencies": {
   },
