--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -7,7 +7,7 @@
     "lib": ["ES2020"],
     "module": "ES2020",
     "declaration": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "noEmit": true,
     "strict": true,
     "noImplicitAny": false,
