--- a/packages/nestjs/tsconfig-build-cjs.json
+++ b/packages/nestjs/tsconfig-build-cjs.json
@@ -6,7 +6,8 @@
     "outDir": "../../build/nestjs/cjs",
     "paths": {
       "@opra/url": ["../../build/url"],
-      "@opra/i18n": ["../../build/i18n"]
+      "@opra/i18n": ["../../build/i18n"],
+      "@opra/schema": ["../../build/schema"]
     },
     "sourceMap": false,
     "noEmit": false,
