--- a/packages/schema/tsconfig-build-esm.json
+++ b/packages/schema/tsconfig-build-esm.json
@@ -1,11 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ESNext",
     "rootDir": "src",
-    "outDir": "../../build/i18n/cjs",
+    "outDir": "../../build/schema/esm",
     "sourceMap": false,
     "noEmit": false,
-    "declaration": false,
+    "declaration": false
   }
 }
