--- a/packages/nestjs/tsconfig.json
+++ b/packages/nestjs/tsconfig.json
@@ -9,6 +9,6 @@
       "@opra/core": ["../core/src"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "test"],
   "exclude": ["node_modules", "dist", "bin"]
 }
