--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -5,6 +5,6 @@
     "paths": {
     }
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "test", "bin"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules", "dist", "bin"]
 }
