--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,6 +8,6 @@
       "@opra/url": ["../url/src"]
     }
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "test", "bin"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules", "dist", "bin"]
 }
