--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,18 +42,18 @@
   },
   "type": "module",
   "main": "cjs/index.js",
-  "module": "esm/index.mjs",
+  "module": "esm/index.js",
   "types": "esm/index.d.ts",
   "exports": {
     ".": {
-      "require":  "./cjs/index.js",
-      "default": "./esm/index.mjs"
+      "require": "./cjs/index.js",
+      "default": "./esm/index.js"
     },
     "./cjs": "./cjs/index.js",
-    "./esm": "./esm/index.mjs"
+    "./esm": "./esm/index.js"
   },
   "engines": {
-    "node": ">=14.0",
+    "node": ">=16.0",
     "npm": ">=7.0.0"
   },
   "files": [
@@ -65,6 +65,13 @@
   ],
   "keywords": [
     "opra",
-    "schema"
+    "rest",
+    "api",
+    "oas",
+    "open",
+    "swagger",
+    "raml",
+    "http",
+    "web"
   ]
 }
