--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@opra/common",
+  "name": "@opra/sqv",
   "version": "0.0.1",
-  "description": "Opra internationalization package",
+  "description": "Opra SQB adapter package",
   "author": "Panates",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/panates/opra.git",
-    "directory": "packages/common"
+    "directory": "packages/sqb"
   },
   "scripts": {
     "compile": "tsc",
@@ -15,24 +15,24 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/common | cp ../../package.cjs.json ../../build/common/cjs/package.json",
+    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/sqb | cp ../../package.cjs.json ../../build/sqb/cjs/package.json",
     "lint": "eslint {src,test}/**/*.ts --no-error-on-unmatched-pattern",
     "test": "jest",
     "cover": "jest --collect-coverage",
     "check": "madge --circular src/**/*",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
-    "clean:dist": "rimraf ../../build/common",
-    "clean:cover": "rimraf ../../coverage/common"
+    "clean:dist": "rimraf ../../build/sqb",
+    "clean:cover": "rimraf ../../coverage/sqb"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "ts-gems": "^2.2.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.x",
+    "ts-gems": "^2.2.0"
   },
-  "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@types/reflect-metadata": "^0.1.0"
+  "peerDependencies": {
+    "@opra/core": "0.x.x",
+    "@sqb/connect": "4.x.x",
+    "@sqb/sqljs": "4.x.x"
   },
   "type": "module",
   "main": "cjs/index.js",
@@ -59,6 +59,7 @@
   ],
   "keywords": [
     "opra",
-    "common"
+    "sqb",
+    "adapter"
   ]
 }
