--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,15 +11,14 @@
   },
   "scripts": {
     "compile": "tsc",
-    "prebuild": "npm run check | npm run lint | npm run clean",
+    "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/core | cp ../../package.cjs.json ../../build/core/cjs/package.json",
-    "lint": "eslint {src,test}/**/*.ts --no-error-on-unmatched-pattern",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/core && cp ../../package.cjs.json ../../build/core/cjs/package.json",
+    "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "check": "madge --circular src/**/*",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/core",
@@ -28,6 +27,7 @@
   "dependencies": {
     "@opra/i18n": "0.x.x",
     "@opra/common": "0.x.x",
+    "@opra/optionals": "0.x.x",
     "ts-gems": "^2.2.0",
     "lodash": "^4.17.21",
     "putil-isplainobject": "^1.1.4",
