--- a/packages/core/tsconfig-build-cjs.json
+++ b/packages/core/tsconfig-build-cjs.json
@@ -8,6 +8,7 @@
       "@opra/i18n": ["../../build/i18n"],
       "@opra/common": ["../../build/common"],
       "@opra/url": ["../../build/url"],
+      "@opra/optionals": ["../../build/optionals"]
     },
     "sourceMap": false,
     "noEmit": false,
