--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@opra/i18n": ["../i18n/src"],
       "@opra/common": ["../common/src"],
-      "@opra/url": ["../url/src"]
+      "@opra/url": ["../url/src"],
+      "@opra/optionals": ["../optionals"]
     }
   },
   "include": ["src", "test"],
