--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -11,19 +11,17 @@
   },
   "scripts": {
     "compile": "tsc",
-    "prebuild": "npm run check | npm run lint | npm run clean",
+    "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/common | cp ../../package.cjs.json ../../build/common/cjs/package.json",
-    "lint": "eslint {src,test}/**/*.ts --no-error-on-unmatched-pattern",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/common && cp ../../package.cjs.json ../../build/common/cjs/package.json",
+    "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "check": "madge --circular src/**/*",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
-    "clean:src": "ts-cleanup -s src --all",
-    "clean:dist": "rimraf ../../build/common",
-    "clean:cover": "rimraf ../../coverage/common"
+    "clean:dist": "rimraf ../../build/optionals",
+    "clean:cover": "rimraf ../../coverage/optionals"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
