--- a/packages/nestjs/tsconfig-build-esm.json
+++ b/packages/nestjs/tsconfig-build-esm.json
@@ -12,7 +12,7 @@
     },
     "sourceMap": false,
     "noEmit": false,
-    "declaration": false
+    "declaration": true
   },
   "include": ["src"]
 }
