--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -11,15 +11,14 @@
   },
   "scripts": {
     "compile": "tsc",
-    "prebuild": "npm run check | npm run lint | npm run clean",
+    "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "build:esm": "tsc -b tsconfig-build-esm.json && tsc-esm -p tsconfig-build-esm.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/sqb | cp ../../package.cjs.json ../../build/sqb/cjs/package.json",
-    "lint": "eslint {src,test}/**/*.ts --no-error-on-unmatched-pattern",
+    "build:esm": "tsc -b tsconfig-build-esm.json",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/sqb && cp ../../package.cjs.json ../../build/sqb/cjs/package.json",
+    "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "check": "madge --circular src/**/*",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/sqb",
@@ -31,8 +30,10 @@
   },
   "peerDependencies": {
     "@opra/core": "0.x.x",
-    "@sqb/connect": "4.x.x",
-    "@sqb/sqljs": "4.x.x"
+    "@opra/url": "0.x.x",
+    "@opra/optionals": "0.x.x",
+    "@sqb/connect": ">= 4.5.0",
+    "@sqb/sqljs": ">= 4.5.0"
   },
   "type": "module",
   "main": "cjs/index.js",
