--- a/packages/url/package.json
+++ b/packages/url/package.json
@@ -11,12 +11,12 @@
   },
   "scripts": {
     "compile": "tsc",
-    "prebuild": "npm run lint | npm run clean",
+    "prebuild": "npm run lint && npm run clean",
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -b tsconfig-build-esm.json",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
-    "postbuild": "copyfiles README.md package.json ../../LICENSE ../../build/url | copyfiles ../../package.cjs.json ../../build/url/cjs/package.json",
-    "lint": "eslint {src,test}/**/*.ts --no-error-on-unmatched-pattern",
+    "postbuild": "cp README.md package.json ../../LICENSE ../../build/url && cp ../../package.cjs.json ../../build/url/cjs/package.json",
+    "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
     "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
