Build scripts fixed

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,7 +19,8 @@
     "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
+    "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
+    "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/optionals",
     "clean:cover": "rimraf ../../coverage/optionals"
   },
