--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,12 +19,13 @@
     "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
+    "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/core",
     "clean:cover": "rimraf ../../coverage/core"
   },
   "dependencies": {
+    "@opra/url": "0.x.x",
     "@opra/i18n": "0.x.x",
     "@opra/common": "0.x.x",
     "@opra/optionals": "0.x.x",
