--- a/packages/sqb/package.json
+++ b/packages/sqb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@opra/sqv",
+  "name": "@opra/sqb",
   "version": "0.0.1",
   "description": "Opra SQB adapter package",
   "author": "Panates",
@@ -19,7 +19,7 @@
     "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
-    "clean": "npm run clean:src | npm run clean:dist | npm run clean:cover",
+    "clean": "npm run clean:src && npm run clean:dist && npm run clean:cover",
     "clean:src": "ts-cleanup -s src --all",
     "clean:dist": "rimraf ../../build/sqb",
     "clean:cover": "rimraf ../../coverage/sqb"
