Renamed module "opra/common" to "opra/schema"

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@opra/url": "0.x.x",
     "@opra/i18n": "0.x.x",
-    "@opra/common": "0.x.x",
+    "@opra/schema": "0.x.x",
     "@opra/optionals": "0.x.x",
     "ts-gems": "^2.2.0",
     "lodash": "^4.17.21",
