--- a/packages/nestjs/tsconfig-build-esm.json
+++ b/packages/nestjs/tsconfig-build-esm.json
@@ -6,8 +6,8 @@
     "outDir": "../../build/nestjs/esm",
     "paths": {
       "@opra/i18n": ["../../build/i18n"],
-      "opra/url": ["../../build/url"],
-      "@opra/common": ["../../build/schema"],
+      "@opra/url": ["../../build/url"],
+      "@opra/schema": ["../../build/schema"],
       "@opra/core": ["../../build/core"]
     },
     "sourceMap": false,
