--- a/packages/core/tsconfig-build-esm.json
+++ b/packages/core/tsconfig-build-esm.json
@@ -6,7 +6,7 @@
     "outDir": "../../build/core/esm",
     "paths": {
       "@opra/i18n": ["../../build/i18n"],
-      "@opra/common": ["../../build/common"],
+      "@opra/schema": ["../../build/schema"],
       "@opra/url": ["../../build/url"],
       "@opra/optionals": ["../../build/optionals"]
     },
