--- a/.rman.yml
+++ b/.rman.yml
@@ -2,8 +2,8 @@ command:
   publish:
     contents: build
   version:
-
+    unified: true
   run:
-    parallel: lint
+    parallel: lint,clean
 
 logLevel: verbose
