--- a/packages/optionals/package.json
+++ b/packages/optionals/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/optionals",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "Optional dependency imports",
   "author": "Panates",
   "license": "MIT",
@@ -18,8 +18,7 @@
     "clean:dist": "rimraf ../../build/optionals",
     "clean:cover": "rimraf ../../coverage/optionals"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "class-validator": "^0.13.2",
     "@nestjs/common": "^9.0.11"
@@ -30,7 +29,7 @@
   "types": "esm/index.d.ts",
   "exports": {
     ".": {
-      "require":  "./cjs/index.js",
+      "require": "./cjs/index.js",
       "default": "./esm/index.js"
     },
     "./cjs": "./cjs/index.js",
