--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/core",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "description": "Opra schema package",
   "author": "Panates",
   "license": "MIT",
@@ -39,8 +39,7 @@
     "@types/express": "^4.17.13",
     "express": "^4.18.1"
   },
-  "peerDependencies": {
-  },
+  "peerDependencies": {},
   "type": "module",
   "main": "cjs/index.js",
   "module": "esm/index.js",
