--- a/packages/url/package.json
+++ b/packages/url/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opra/url",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Opra URL parser/builder",
   "author": "Panates",
   "license": "MIT",
@@ -26,7 +26,7 @@
     "antlr": "antlr4ts -visitor -no-listener src/filter/antlr/OpraFilter.g4"
   },
   "dependencies": {
-    "antlr4": "^4.11.0",
+    "antlr4ts": "^0.5.0-alpha.4",
     "luxon": "^3.0.3",
     "fast-tokenizer": "^1.1.0"
   },
