Bulk alpha commit

--- a/packages/sqb/tsconfig-build-cjs.json
+++ b/packages/sqb/tsconfig-build-cjs.json
@@ -8,6 +8,7 @@
     "paths": {
       "@opra/core": ["../../build/core"],
       "@opra/url": ["../../build/url"],
+      "@opra/schema": ["../../build/schema"],
       "@opra/optionals": ["../../build/optionals"]
     },
     "sourceMap": false,
