--- a/packages/sqb/tsconfig-build-esm.json
+++ b/packages/sqb/tsconfig-build-esm.json
@@ -7,11 +7,12 @@
     "paths": {
       "@opra/core": ["../../build/core"],
       "@opra/url": ["../../build/url"],
+      "@opra/schema": ["../../build/schema"],
       "@opra/optionals": ["../../build/optionals"]
     },
     "sourceMap": false,
     "noEmit": false,
-    "declaration": false
+    "declaration": true
   },
   "include": ["src"]
 }
