--- a/packages/sqb/tsconfig.json
+++ b/packages/sqb/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@opra/core": ["../core/src"],
       "@opra/url": ["../url/src"],
+      "@opra/schema": ["../schema/src"],
       "@opra/optionals": ["../optionals"]
     }
   },
