--- a/package.json
+++ b/package.json
@@ -22,31 +22,28 @@
     "precitest": "rimraf coverage",
     "citest": "jest --passWithNoTests --detectOpenHandles --coverage --coverageReporters=lcov"
   },
-  "dependencies": {
-  },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
+    "@babel/eslint-parser": "^7.19.1",
     "@tsconfig/recommended": "^1.0.1",
-    "@types/jest": "^29.0.1",
-    "@types/node": "^18.7.17",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "antlr4ts": "^0.5.0-alpha.4",
-    "eslint": "8.21.0",
+    "eslint": "^8.23.1",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.0.3",
-    "prettier": "^2.7.1",
     "npm-run-path": "^5.1.0",
+    "prettier": "^2.7.1",
     "putil-varhelpers": "^1.6.4",
     "rimraf": "^3.0.2",
-    "rman": "^0.18.0",
     "supertest": "^6.2.4",
     "ts-cleanup": "^0.2.5",
-    "ts-jest": "^29.0.0",
+    "ts-jest": "^29.0.1",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
