--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -25,12 +25,12 @@
     "clean:cover": "rimraf ../../coverage/schema"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
-    "ts-gems": "^2.2.0",
-    "lodash": "^4.17.21"
+    "ts-gems": "^2.2.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.14.185",
     "@types/reflect-metadata": "^0.1.0"
   },
   "type": "module",
