--- a/packages/url/package.json
+++ b/packages/url/package.json
@@ -27,8 +27,8 @@
   },
   "dependencies": {
     "antlr4ts": "^0.5.0-alpha.4",
-    "luxon": "^3.0.3",
-    "fast-tokenizer": "^1.1.0"
+    "fast-tokenizer": "^1.1.0",
+    "luxon": "^3.0.3"
   },
   "devDependencies": {
     "@types/luxon": "^3.0.1",
