--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,6 +33,7 @@
     "putil-isplainobject": "^1.1.4",
     "putil-varhelpers": "^1.6.4",
     "rule-judgment": "^1.1.5",
+    "strict-typed-events": "^2.2.0",
     "ts-gems": "^2.2.0"
   },
   "devDependencies": {
