--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,9 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -b tsconfig-build-cjs.json",
     "build:esm": "tsc -b tsconfig-build-esm.json",
-    "postbuild": "cp README.md package.json ../../LICENSE ../../build/core && cp ../../package.cjs.json ../../build/core/cjs/package.json",
+    "postbuild": "npm run _copyi18n && npm run _copy_pkg_files",
+    "_copy_pkg_files": "cp README.md package.json ../../LICENSE ../../build/core && cp ../../package.cjs.json ../../build/core/cjs/package.json",
+    "_copyi18n": "cp -R i18n ../../build/core/i18n",
     "lint": "eslint .",
     "test": "jest",
     "cover": "jest --collect-coverage",
@@ -60,6 +62,7 @@
     "bin/",
     "cjs/",
     "esm/",
+    "i18n/",
     "LICENSE",
     "README.md"
   ],
