--- a/packages/exception/tsconfig-build-esm.json
+++ b/packages/exception/tsconfig-build-esm.json
@@ -6,6 +6,7 @@
     "outDir": "../../build/exception/esm",
     "paths": {
       "@opra/i18n": ["../../build/i18n"],
+      "@opra/schema": ["../../build/schema"]
     },
     "sourceMap": false,
     "noEmit": false,
