--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -25,7 +25,9 @@
     "clean:cover": "rimraf ../../coverage/exception"
   },
   "dependencies": {
-    "@opra/i18n": "^0.1.1"
+    "ts-gems": "2.2.0",
+    "@opra/i18n": "^0.1.1",
+    "@opra/schema": "^0.1.1"
   },
   "type": "module",
   "types": "esm/index.d.ts",
