--- a/packages/exception/tsconfig-build-cjs.json
+++ b/packages/exception/tsconfig-build-cjs.json
@@ -7,6 +7,7 @@
     "outDir": "../../build/exception/cjs",
     "paths": {
       "@opra/i18n": ["../../build/i18n"],
+      "@opra/schema": ["../../build/schema"]
     },
     "sourceMap": false,
     "noEmit": false,
