--- a/packages/exception/tsconfig.json
+++ b/packages/exception/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@opra/i18n": ["../i18n/src"]
+      "@opra/i18n": ["../i18n/src"],
+      "@opra/schema": ["../schema/src"]
     }
   },
   "include": ["src", "test"],
