--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,7 +34,7 @@
     "@opra/url": "^0.2.0",
     "@nano-sql/core": "^2.3.7",
     "express": "^4.18.1",
-    "body-parser": "^body-parser",
+    "body-parser": "^1.20.1",
     "lodash": "^4.17.21",
     "putil-isplainobject": "^1.1.4",
     "putil-varhelpers": "^1.6.4",
