--- a/packages/exception/tsconfig-build-esm.json
+++ b/packages/exception/tsconfig-build-esm.json
@@ -5,8 +5,7 @@
     "rootDir": "src",
     "outDir": "../../build/exception/esm",
     "paths": {
-      "@opra/i18n": ["../../build/i18n"],
-      "@opra/schema": ["../../build/schema"]
+      "@opra/i18n": ["../../build/i18n"]
     },
     "sourceMap": false,
     "noEmit": false,
