--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -26,8 +26,7 @@
   },
   "dependencies": {
     "ts-gems": "2.2.0",
-    "@opra/i18n": "^0.2.0",
-    "@opra/schema": "^0.2.0"
+    "@opra/i18n": "^0.2.0"
   },
   "type": "module",
   "types": "esm/index.d.ts",
