--- a/packages/exception/tsconfig-build-cjs.json
+++ b/packages/exception/tsconfig-build-cjs.json
@@ -6,8 +6,7 @@
     "rootDir": "src",
     "outDir": "../../build/exception/cjs",
     "paths": {
-      "@opra/i18n": ["../../build/i18n"],
-      "@opra/schema": ["../../build/schema"]
+      "@opra/i18n": ["../../build/i18n"]
     },
     "sourceMap": false,
     "noEmit": false,
