Used glob pattern for "paths", seperated tsconfig for lint and compile

--- a/packages/exception/tsconfig-build-cjs.json
+++ b/packages/exception/tsconfig-build-cjs.json
@@ -6,7 +6,7 @@
     "rootDir": "src",
     "outDir": "../../build/exception/cjs",
     "paths": {
-      "@opra/i18n": ["../../build/i18n"]
+      "@opra/*": ["../../build/*"]
     },
     "sourceMap": false,
     "noEmit": false,
