--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "ecmaVersion": 2020,
-        "project": "tsconfig.json",
+        "project": "tsconfig-lint.json",
         "sourceType": "module"
       },
       "plugins": [
