--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -3,13 +3,9 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@opra/exception": ["../exception/src"],
-      "@opra/i18n": ["../i18n/src"],
-      "@opra/optionals": ["../optionals"],
-      "@opra/schema": ["../schema/src"],
-      "@opra/url": ["../url/src"]
+      "@opra/*": ["../*/src"]
     }
   },
-  "include": ["src", "test"],
-  "exclude": ["node_modules", "dist", "bin"]
+  "include": ["src"],
+  "exclude": ["node_modules", "test"]
 }
