--- a/packages/exception/tsconfig-build-esm.json
+++ b/packages/exception/tsconfig-build-esm.json
@@ -5,7 +5,7 @@
     "rootDir": "src",
     "outDir": "../../build/exception/esm",
     "paths": {
-      "@opra/i18n": ["../../build/i18n"]
+      "@opra/*": ["../../build/*"]
     },
     "sourceMap": false,
     "noEmit": false,
