--- a/packages/nestjs/tsconfig-build-esm.json
+++ b/packages/nestjs/tsconfig-build-esm.json
@@ -5,10 +5,7 @@
     "rootDir": "src",
     "outDir": "../../build/nestjs/esm",
     "paths": {
-      "@opra/i18n": ["../../build/i18n"],
-      "@opra/url": ["../../build/url"],
-      "@opra/schema": ["../../build/schema"],
-      "@opra/core": ["../../build/core"]
+      "@opra/*": ["../../build/*"]
     },
     "sourceMap": false,
     "noEmit": false,
