--- a/packages/schema/tsconfig-build-esm.json
+++ b/packages/schema/tsconfig-build-esm.json
@@ -5,9 +5,7 @@
     "rootDir": "src",
     "outDir": "../../build/schema/esm",
     "paths": {
-      "@opra/exception": ["../../build/exception"],
-      "@opra/i18n": ["../../build/i18n"],
-      "@opra/url": ["../../build/url"]
+      "@opra/*": ["../../build/*"]
     },
     "sourceMap": false,
     "noEmit": false,
