--- a/packages/sqb/tsconfig-build-cjs.json
+++ b/packages/sqb/tsconfig-build-cjs.json
@@ -6,11 +6,7 @@
     "rootDir": "src",
     "outDir": "../../build/sqb/cjs",
     "paths": {
-      "@opra/core": ["../../build/core"],
-      "@opra/exception": ["../../build/exception"],
-      "@opra/url": ["../../build/url"],
-      "@opra/schema": ["../../build/schema"],
-      "@opra/optionals": ["../../build/optionals"]
+      "@opra/*": ["../../build/*"]
     },
     "sourceMap": false,
     "noEmit": false,
