--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,6 +30,8 @@
     "@opra/exception": "^0.3.0",
     "@opra/schema": "^0.3.0",
     "axios": "^1.1.3",
+    "putil-isplainobject": "^1.1.4",
+    "rxjs": "^7.5.7",
     "ts-gems": "^2.3.0"
   },
   "devDependencies": {
