--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,12 +30,19 @@
     "@opra/exception": "^0.4.0",
     "@opra/schema": "^0.4.0",
     "axios": "^1.1.3",
+    "highland": "^2.13.5",
+    "power-tasks": "^1.5.0",
     "putil-isplainobject": "^1.1.4",
     "rxjs": "^7.5.7",
-    "ts-gems": "^2.3.0"
+    "ts-gems": "^2.3.0",
+    "uid": "^2.0.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.186"
+    "@types/lodash": "^4.14.186",
+    "@types/highland": "^2.12.14",
+    "axiosist": "^1.0.0",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.1"
   },
   "type": "module",
   "types": "esm/index.d.ts",
